--- a/public/tables.html
+++ b/public/tables.html
@@ -377,6 +377,9 @@
                         <div class="card-body">
                             <div class="table-responsive">
                                 <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                                    <h1 colspan="6" style="text-align: center;">
+                                        Coucou
+                                    </h1>
                                     <thead>
                                         <tr>
                                             <th>Name</th>
@@ -398,6 +401,7 @@
                                         </tr>
                                     </tfoot>
                                     <tbody>
+                                        
                                         <tr>
                                             <td>Tiger Nixon</td>
                                             <td>System Architect</td>
